--- a/data.yaml
+++ b/data.yaml
@@ -19,7 +19,7 @@ credentials:
     uzair:
       email: farooquiuzair15@gmail.com
       failed_login_attempts: 0
-      logged_in: true
+      logged_in: false
       name: uzair
       password: $2b$12$hAW1osudoz6JzftOW5CRhu829XL.VoQRBoJClpV3RO8NMKOybLZA.
 preauthorized:
