--- a/data.yaml
+++ b/data.yaml
@@ -1,27 +1,45 @@
 cookie:
   expiry_days: 30
-  key: random_signature_key
-  name: random_cookie_name
+  key: some_signature_key
+  name: some_cookie_name
 credentials:
   usernames:
+    dbaldwin:
+      email: dbaldwin@gmail.com
+      failed_login_attempts: 0
+      logged_in: false
+      name: David Baldwin
+      password: $2b$12$E9/bCaN/r8sN/FV2l8NpgOgspUBAp7UAVU6BgsXJzp/pW8gQWCprC
     jsmith:
       email: jsmith@gmail.com
-      failed_login_attempts: 4
-      logged_in: false
+      failed_login_attempts: 0
+      logged_in: true
       name: John Smith
-      password: $2b$12$EMChx9mh1JnEeD4jDTp0f.WXVr90LhQUmOJuU7ubInqqe/LRijO66
+      password: $2b$12$iWlVOac3uujRvTrXDi6wructXftKmo/GyQd6SMu5FmyX306kH.yFO
     rbriggs:
       email: rbriggs@gmail.com
       failed_login_attempts: 0
       logged_in: false
       name: Rebecca Briggs
-      password: $2b$12$aYc2PnOeL1fkDfuiXl.NBu.a7EVGu1cdn28CvgfFJDEJ3aAaGK46u
-    uzair:
-      email: farooquiuzair15@gmail.com
+      password: $2b$12$uNaTgvGPG9rMbzOJHYaPQePw0DUfp1qHBrSq6l4O304qani6pKFpm
+    rcouper:
+      email: rcouper@gmail.com
       failed_login_attempts: 0
       logged_in: false
+      name: Ross Couper
+      password: $2b$12$Tir/PbHVmmnt5kgNxgOwMuxNIb2fv2pJ.q71TW8ekvbugCqkye4yu
+    uzair:
+      email: uzairfarooqui@gamail.com
+      failed_login_attempts: 0
+      logged_in: true
       name: uzair
-      password: $2b$12$hAW1osudoz6JzftOW5CRhu829XL.VoQRBoJClpV3RO8NMKOybLZA.
+      password: $2b$12$fObcGEVsvcnsK239/.plzOM76MsG9bULi7omPoZfVyEguGNGzyw8S
+    wdewe:
+      email: wedw@ew.com
+      failed_login_attempts: 0
+      logged_in: false
+      name: dwew
+      password: $2b$12$QJBPc7PxaTTBVJ.3cl4KlOPPqYCWVfaHqkk2IsoGDExXhihKZLDgy
 preauthorized:
   emails:
   - melsby@gmail.com
