--- a/data.yaml
+++ b/data.yaml
@@ -13,9 +13,9 @@ credentials:
     jsmith:
       email: jsmith@gmail.com
       failed_login_attempts: 0
-      logged_in: true
+      logged_in: false
       name: John Smith
-      password: $2b$12$iWlVOac3uujRvTrXDi6wructXftKmo/GyQd6SMu5FmyX306kH.yFO
+      password: $2b$12$seLJg/HWHrnGI6XvUiJWcepnQrOMZWqE9UrHAk0hJR3Aa8Y9JwFMq
     rbriggs:
       email: rbriggs@gmail.com
       failed_login_attempts: 0
@@ -33,7 +33,7 @@ credentials:
       failed_login_attempts: 0
       logged_in: false
       name: uzair
-      password: $2b$12$fObcGEVsvcnsK239/.plzOM76MsG9bULi7omPoZfVyEguGNGzyw8S
+      password: $2b$12$mfdRCHFyeCys17btLD5nYepJW3s12GiHHP24LAvEfodzFjFPajxYO
     wdewe:
       email: wedw@ew.com
       failed_login_attempts: 0
